@@ -101,7 +101,7 @@ UI_EN = {
     UI_trait_prospear = "Prowess: Spear",
     UI_trait_prospeardesc = "You are especially good at wielding Spear weapons.<br>While wielding these types of weapons, they degrade more slowly, deal 20% more damage,<br>and have a higher critical chance, which increases based on your skill.<br>+2 Spear",
     UI_trait_albino = "Sun Sensitivity",
-    UI_trait_albinodesc = "You've always had extreme sunlight sensitivity.<br>While outside and in daylight, you experience slight pain.",
+    UI_trait_albinodesc = "You've always had extreme sunlight sensitivity.<br>While outside and in daylight, you experience progressive pain.<br>Hold an umbrella to reduce pain.",
     UI_trait_amputee = "Amputee",
     UI_trait_amputeedesc = "One of your arms was amputated a long time ago.<br>You can not equip anything to your secondary, nor utilize your secondary arm for anything.<br>Your left arm can not be injured, and wounds that would otherwise be placed there are simply ignored.",
     UI_trait_actionhero = "Action Hero",
